@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.190 2005/11/26 21:29:48 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.191 2005/11/27 17:07:53 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  wrap text in log and output view
+  add vertical scrollbars
+  scroll with scrollbars instead of textbuffer iter crap
 
   26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   move partition debug button to top row so it's always visible
